--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>Réplique</title>
   </head>
-  <body>
+  <body style="background-color: #DF6146">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
